finished securing coding with transact and escape
